# PyCAD

./: .dockerignore  .gitignore  Benchmarks_Qest.csv  DOCKER_README.md  Dockerfile  README.md  benchmarker.py  builddocker.sh  install.sh  install_mac.sh  license.txt  licenses_thirdParty.txt  pycad.sh  pycadbenchmarker.sh  run.py  rundocker.sh  test_loader.py
.github/workflows/: DockerBuild.yaml
cpp_math_engine/: CMakeLists.txt  build.sh  engine_core.cpp
cpp_math_engine/exprtk/: license.txt
examples/: 01_sum_uniform.yaml  02_sum_triangular.yaml  03_sum_squared.yaml  04_exp_uniform.yaml  05_exp_triangular.yaml  06_cos_uniform.yaml  07_cos_triangular.yaml  08_ln_uniform.yaml  09_ln_triangular.yaml  10_sin_uniform.yaml  11_sin_triangular.yaml  12_x_by_xy_uniform.yaml  13_x_by_xy_triangular.yaml  14_nonlin1_uniform.yaml  15_nonlin1_triangular.yaml  16_bspline3_uniform.yaml  17_bspline3_triangular.yaml  18_ifelse_uniform.yaml  19_ifelse_triangular.yaml  20_doppler1.yaml  21_doppler2.yaml  22_doppler3.yaml  23_groebner_sphere.yaml  24_spherical.yaml  25_imu_comp_filter.yaml  26_imu_rootfree.yaml  28_compositional.yaml  29_rigidbody.yaml  30_sum_beta.yaml  31_x_by_xy_beta.yaml  32_nonlin1_beta.yaml  33_bspline3_beta.yaml  34_ifelse_beta.yaml  35_doppler1_beta.yaml  36_doppler2_beta.yaml  37_doppler3_beta.yaml
py_cad_modules/: cad_core.py  calculus.py  compositional_cad.py  cpp_oracle.py  preprocessing.py  recursive_orchestrator.py  utils.py  z3_engine.py
simplifier/: CMakeLists.txt  main.cpp  rebuild.sh  test_oracle.py
